tdf#118578 sw: allow inserting only TextDocument

There are 3 sw document services: TextDocument, WebDocument and
GlobalDocument.

The current logic in SwView::InsertDoc() and
SwView_Impl::StartDocumentInserter() is to request a filter with the
same document service as the existing target document, so you can insert
only a GlobalDocument into a GlobalDocument, which doesn't make much
sense.

As it happens there are 2 different HTML import filters: "HTML" and
"HTML (StarWriter)", the latter using the TextDocument service.

So just hard-code to allow TextDocument regardless of the target
document.

(regression from 805fd1ca343d6295b8114a24cc29bdac332f266d)

Change-Id: I7dc0dd4789fba8b61625ca8eae74a864aea383b0
Reviewed-on: https://gerrit.libreoffice.org/57193
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>
(cherry picked from commit 572b298e636612416b8223ff6e6f2d26ab51a243)
Reviewed-on: https://gerrit.libreoffice.org/57223
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>